--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
